--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
               <configuration>
                 <transformers>
                   <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                    <mainClass>com.grupod.App</mainClass>
+                    <mainClass>com.grupod.Funcionario</mainClass>
                   </transformer>
                 </transformers>
               </configuration>
