--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,13 @@
       <version>5.3.1</version>
       <scope>test</scope>
     </dependency>
+    <!-- Dependencias do JUnit -->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <version>5.1.0</version>
+      <scope>test</scope>
+    </dependency>
     <!-- Dependencias do mockito -->
     <dependency>
       <groupId>org.mockito</groupId>
